--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We Clean, You Relax"
+    />
+    <meta 
+      name="image"
+      content="public/logo.jpeg"
     />
     <link rel="apple-touch-icon" href="public/logo.jpeg" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" type="image/x-icon">
