--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,16 @@
       name="description"
       content="We Clean, You Relax"
     />
-    <meta 
-      name="image"
-      content="public/logo.jpeg"
-    />
     <link rel="apple-touch-icon" href="public/logo.jpeg" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.ico" type="image/x-icon">
 
+    <!-- Open Graph meta tags for link preview -->
+    <meta property="og:title" content="3C Cleaning" />
+    <meta property="og:description" content="We Clean, You Relax" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.jpeg" />
+    <meta property="og:url" content="https://https://www.3ccleaning.fi" />
+    <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
