--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.ico" type="image/x-icon">
 
     <!-- Open Graph meta tags for link preview -->
-    <meta property="og:title" content="3C Cleaning" />
+    <meta property="og:title" content="3C Cleaning - Ystävälliset siivouspalvelut" />
     <meta property="og:description" content="We Clean, You Relax" />
     <meta property="og:image" content="%PUBLIC_URL%/logo.jpeg" />
     <meta property="og:url" content="https://https://www.3ccleaning.fi" />
