--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="3C Cleaning - Ystävälliset siivouspalvelut" />
     <meta property="og:description" content="We Clean, You Relax" />
     <meta property="og:image" content="%PUBLIC_URL%/logo.jpeg" />
-    <meta property="og:url" content="https://https://www.3ccleaning.fi" />
+    <meta property="og:url" content="https://www.3ccleaning.fi" />
     <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
